--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 spring.application.name=chat-system-bank
 
+# Configurações para o SQL Developer
+spring.datasource.url=jdbc:mysql://localhost:3306/chat
+spring.datasource.username=root
+spring.datasource.password=5Q8[7Ie+uN7^
+
+# Configurações Hibernate para MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+
 
 server.address=192.168.1.2
 server.port=8086
