--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,35 @@
           <version>8.0.33</version>
       </dependency>
 
-       <dependency>
-       	<groupId>com.example</groupId>
-       	<artifactId>bici</artifactId>
-       	<version>0.0.1-SNAPSHOT</version>
-       </dependency>
+		<dependency>
+			<groupId>org.jetbrains</groupId>
+			<artifactId>annotations</artifactId>
+			<version>24.1.0</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- SLF4J API -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.30</version>
+		</dependency>
+
+		<!-- Logback Implementation -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.4.12</version>
+		</dependency>
+
+		<!-- Spring Boot Starter for Logging -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-logging</artifactId>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
